--- a/WindowsApplication2/HelpDesk.vbproj
+++ b/WindowsApplication2/HelpDesk.vbproj
@@ -88,6 +88,12 @@
     <Compile Include="Engineerallowcation.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Engineersolution.Designer.vb">
+      <DependentUpon>Engineersolution.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Engineersolution.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Login.Designer.vb">
       <DependentUpon>Login.vb</DependentUpon>
     </Compile>
@@ -155,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Engineerallowcation.resx">
       <DependentUpon>Engineerallowcation.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Engineersolution.resx">
+      <DependentUpon>Engineersolution.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.vb</DependentUpon>
